- changed PHP requirement to PHP 5.3.2 (Thorsten)
- phpMyFAQ is now licensed under the terms of Mozilla Public License 2.0 (Thorsten, Florian)
- added new and improved frontend and backend user interface based on Twitter Bootstrap (Thorsten)
- added improved advanced search in subcategories (Thorsten)
- added possibility to close and delete open questions (Peter Caesar)
- added user control panel (Thorsten)
- added support for Composer (Thorsten)
- added online verification check (Thorsten, Florian)
- dropped support for IBM DB2, Interbase/Firebird and Sybase (Thorsten)
- improved usability of administration backend (Thorsten)
- improved setup and update (Thorsten)
- improved security with salted passwords (Thorsten)
- improved CSS development with LESS (Thorsten)
- updated bundled jQuery to version 1.7.1 (Thorsten)
- updated bundled Modernizr to version 2.5.2 (Thorsten)
- updated bundled Twitter Bootstrap to version 2.0.2 (Thorsten)
- fixed some bugs (Thorsten, Florian)

Version 2.7.5 - 2012-04-14
- fixed serious security issue in bundled ImageManager library (Thorsten)
- full support for Microsoft SQL Server Driver for PHP (Thorsten)
- added online verification check (Thorsten, Florian)
- added experimental support for SQLite3 (Thorsten)
- updated Spanish translation (Reynaldo Martinez P.)
- fixed Slovak translation (Thorsten)
- fixed IE9 related JavaScript issues (Thorsten)
- fixed some bugs (Thorsten)

Version 2.7.4 - 2012-02-22
- added PDF export for complete FAQ in frontend (Thorsten)
- updated Japanese translation
- updated Russian translation (Alexander Melnik)
- updated Spanish translation
- fixed backup issue (Thorsten)
- fixed some bugs (Alexander Melnik, Thorsten, Aco Mitevski)

Version 2.7.3 - 2012-01-16
- improved PDF export (Thorsten)
- updated Dutch translation (Almar van Pel)
- fixed some PostgreSQL related issues (Vince, Thorsten)
- fixed some attachment related issues (Thorsten)
- fixed some bugs (Thorsten)

Version 2.7.2 - 2011-12-31