@@ -11,6 +11,7 @@ Version 2.8.0-alpha2 - 2012-
 - added new and improved frontend and backend user interface based on Twitter Bootstrap (Thorsten)
 - added improved advanced search in subcategories (Thorsten)
 - added possibility to close and delete open questions (Peter Caesar)
+- added possibility to delete multiple open questions (Thorsten)
 - added user control panel (Thorsten)
 - added support for Composer (Thorsten)
 - added online verification check (Thorsten, Florian)
